syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/v1/messages.proto";

option go_package = "github.com/escoutdoor/linko/common/pkg/proto/user/v1;userv1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Linko User Service"
    version: "1.0"
    contact: {
      name: "Ivan Popov"
      email: "vanap387@gmail.com"
    }
  }
  schemes: HTTP
  schemes: HTTPS
};

service UserService {
  // Returns the user by their ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {get: "/v1/users/{user_id}"};
  }

  // Returns the user after the update
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/v1/users/{user_id}"
      body: "update"
    };
  }
}
